--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <iframe
     width="100%"
     height="480"
-    src="video1024302136.mp4"
+    src="https://github.com/andersonflores338-cmyk/CasoPract2/raw/refs/heads/main/video1024302136.mp4"
     title="Video de ayuda"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -105,5 +105,6 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
