--- a/index.html
+++ b/index.html
@@ -85,18 +85,15 @@
 <section id="ayuda" class="seccion oculto">
   <h2 id="tituloAyuda">Ayuda del Sistema</h2>
 
-  <iframe
-    width="100%"
-    height="480"
-    src="https://github.com/andersonflores338-cmyk/CasoPract2/raw/refs/heads/main/video1024302136.mp4"
-    title="Video de ayuda"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen>
-  </iframe>
+  <video controls>
+    <source 
+      src="https://github.com/andersonflores338-cmyk/CasoPract2/raw/refs/heads/main/video1024302136.mp4" 
+      type="video/mp4">
+  </video>
 
   <p id="textoAyuda">Este video explica cómo usar el sistema.</p>
 </section>
+
 
 
 
@@ -105,6 +102,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
