--- a/index.html
+++ b/index.html
@@ -85,14 +85,20 @@
 <section id="ayuda" class="seccion oculto">
   <h2 id="tituloAyuda">Ayuda del Sistema</h2>
 
-  <video controls>
-    <source 
-      src="https://github.com/andersonflores338-cmyk/CasoPract2/raw/refs/heads/main/video1024302136.mp4" 
+  <video
+    controls
+    preload="metadata"
+    controlsList="nodownload"
+  >
+    <source
+      src="https://github.com/andersonflores338-cmyk/CasoPract2/raw/refs/heads/main/video1024302136.mp4"
       type="video/mp4">
+    Tu navegador no soporta videos HTML5.
   </video>
 
   <p id="textoAyuda">Este video explica cómo usar el sistema.</p>
 </section>
+
 
 
 
@@ -102,6 +108,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
